feat: strengthed security and improved intraservice communication