@@ -12,13 +12,17 @@ import org.springframework.stereotype.Component;
 import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Validates RSA-signed service tokens locally using the cached public key.
  *
  * <p>No network call is made during validation — the RSA public key is fetched
  * once at startup by {@link PublicKeyProvider} and reused for all requests.</p>
+ *
+ * <p>If token validation fails with a {@link JwtException}, the validator automatically
+ * refreshes the cached public key via {@link PublicKeyProvider#refresh()} and retries
+ * once. This allows the service to self-heal after an auth-manager restart that
+ * rotates the RSA key pair, without requiring a manual restart.</p>
  *
  * @author test-in-prod-10x
  * @version 1.0
@@ -35,12 +39,19 @@ public class ServiceTokenValidator {
      * Parses and validates a service token, returning a {@link UserPrincipal}
      * whose authorities contain all roles from the token's {@code roles} claim.
      *
+     * <p>On a {@link JwtException} the public key cache is refreshed and the
+     * validation is retried once before throwing a 401 response.</p>
+     *
      * @param token the compact JWT string (without "Bearer " prefix)
      * @return a principal with {@code ROLE_SYSTEM} and {@code ROLE_SYS_*} authorities
      * @throws ResponseStatusException 401 if the signature is invalid, token is expired,
      *                                 or the {@code type} claim is not {@code "SERVICE"}
      */
     public UserPrincipal validate(String token) {
+        return doValidate(token, false);
+    }
+
+    private UserPrincipal doValidate(String token, boolean isRetry) {
         try {
             Claims claims = Jwts.parserBuilder()
                     .setSigningKey(publicKeyProvider.getPublicKey())
@@ -54,17 +65,19 @@ public class ServiceTokenValidator {
             }
 
             String subject = claims.getSubject();
-
             @SuppressWarnings("unchecked")
             List<String> roles = claims.get("roles", List.class);
-
             List<SimpleGrantedAuthority> authorities = roles.stream()
                     .map(r -> new SimpleGrantedAuthority("ROLE_" + r))
-                    .collect(Collectors.toList());
-
-            return new UserPrincipal(subject, roles.get(0), authorities);
+                    .toList();
+            return new UserPrincipal(subject, roles.getFirst(), authorities);
 
         } catch (JwtException e) {
+            if (!isRetry) {
+                log.warn("Service token validation failed, refreshing public key: {}", e.getMessage());
+                publicKeyProvider.refresh();
+                return doValidate(token, true);
+            }
             throw new ResponseStatusException(HttpStatus.UNAUTHORIZED,
                     "Invalid service token: " + e.getMessage());
         }
